# pythonLearn

./: .gitignore  Testcase.py  __init__.py  config  conftest.py  description  find_in_pool.py  gooey_config.json  init_pc.py  paaaaa33.py  package.py  pc_24.py  pc_QT5.py  pc_aeon.py  pc_atx.py  pc_azurlane.py  pc_base64.py  pc_behavior.py  pc_bool.py  pc_cal_rsi.py  pc_class_multi.py  pc_click.py  pc_efinance.py  pc_enum.py  pc_factory1.py  pc_factory2.py  pc_filere.py  pc_findit.py  pc_for_yield.py  pc_gooey.py  pc_gradio.py  pc_icecream.py  pc_inherit.py  pc_json.py  pc_json_beauty.py  pc_lambda.py  pc_locDifference.py  pc_mat_network.py  pc_mongoDb.py  pc_monkey.py  (+25 more)
SearchWords/: SearchWords.xlsx
Utils/: CaptchaUtil.py  DataUtil.py  DataUtil_v2.py  DataUtil_v3.py  DiffUtil.py  Excelize.py  HttpUtil.py  PdfUtil.py  TimeItUtil.py  txtUtil.py
archived/: pc_PICT.py  pc_QT5.py  pc_async.py  pc_base64.py  pc_cal_bool.py  pc_click.py  pc_enum.py  pc_factory3.py  pc_filere.py  pc_findit.py  pc_gradio.py  pc_icecream.py  pc_inherit.py  pc_monkey.py  pc_multiprocess.py  pc_multiprocess2.py  pc_orthogonal.py  pc_oss.py  pc_param.py  pc_readCVM.py  pc_readCVM_2.py  pc_readCVM_3.py  pc_socket_class.py  pc_threading.py  pc_threadlocal.py  pc_threadlocal_class.py  pc_ucb.py  pc_wordReplace.py
favorite/: Excel.xlsx  Excel_shfe.xlsx  Excel_shfe_diff.xlsx  __init__.py  calendar.xlsx  main.py  pc_akshare.py  pc_backtrade.py  pc_baostock.py  pc_behavior.py  pc_calendar_cffex.py  pc_calendar_dce.py  pc_calendar_shfe.py  pc_calendar_zce.py  pc_create_time.py  pc_fastapi.py  pc_others.py  (+29 more)
